--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-number-format": "^1.2.0",
     "react-router": "^4.1.1"
   },
   "devDependencies": {
